--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>贪吃蛇</title>
 	<script src="js/jquery1.12.1.js"></script>
+	<script src="js/touch-0.2.14.min.js"></script>
 	<script src="js/index.js"></script>
 	<link rel="stylesheet" href="css/index.css">
 </head>
